golden/error/lex_non_ascii.test
{
  "éclair": "sweet",
  gougère = "savory";
}

# output:
 --> stdin:3:6
  |
3 |   gougère = "savory";
  |       ^
Error: Non-ascii characters are not supported here.
